--- a/wwwroot/css/DataJuggler.Blazor.Components.css
+++ b/wwwroot/css/DataJuggler.Blazor.Components.css
@@ -6603,6 +6603,262 @@
 {
     font-size: 36px;
 }
+.fontsize37
+{
+    font-size: 37px;
+}
+.fontsize38
+{
+    font-size: 38px;
+}
+.fontsize39
+{
+    font-size: 39px;
+}
+.fontsize40
+{
+    font-size: 40px;
+}
+.fontsize41
+{
+    font-size: 41px;
+}
+.fontsize42
+{
+    font-size: 42px;
+}
+.fontsize43
+{
+    font-size: 43px;
+}
+.fontsize44
+{
+    font-size: 44px;
+}
+.fontsize45
+{
+    font-size: 45px;
+}
+.fontsize46
+{
+    font-size: 46px;
+}
+.fontsize47
+{
+    font-size: 47px;
+}
+.fontsize48
+{
+    font-size: 48px;
+}
+.fontsize49
+{
+    font-size: 49px;
+}
+.fontsize50
+{
+    font-size: 50px;
+}
+.fontsize51
+{
+    font-size: 51px;
+}
+.fontsize52
+{
+    font-size: 52px;
+}
+.fontsize53
+{
+    font-size: 53px;
+}
+.fontsize54
+{
+    font-size: 54px;
+}
+.fontsize55
+{
+    font-size: 55px;
+}
+.fontsize56
+{
+    font-size: 56px;
+}
+.fontsize57
+{
+    font-size: 57px;
+}
+.fontsize58
+{
+    font-size: 58px;
+}
+.fontsize59
+{
+    font-size: 59px;
+}
+.fontsize60
+{
+    font-size: 60px;
+}
+.fontsize61
+{
+    font-size: 61px;
+}
+.fontsize62
+{
+    font-size: 62px;
+}
+.fontsize63
+{
+    font-size: 63px;
+}
+.fontsize64
+{
+    font-size: 64px;
+}
+.fontsize65
+{
+    font-size: 65px;
+}
+.fontsize66
+{
+    font-size: 66px;
+}
+.fontsize67
+{
+    font-size: 67px;
+}
+.fontsize68
+{
+    font-size: 68px;
+}
+.fontsize69
+{
+    font-size: 69px;
+}
+.fontsize70
+{
+    font-size: 70px;
+}
+.fontsize71
+{
+    font-size: 71px;
+}
+.fontsize72
+{
+    font-size: 72px;
+}
+.fontsize73
+{
+    font-size: 73px;
+}
+.fontsize74
+{
+    font-size: 74px;
+}
+.fontsize75
+{
+    font-size: 75px;
+}
+.fontsize76
+{
+    font-size: 76px;
+}
+.fontsize77
+{
+    font-size: 77px;
+}
+.fontsize78
+{
+    font-size: 78px;
+}
+.fontsize79
+{
+    font-size: 79px;
+}
+.fontsize80
+{
+    font-size: 80px;
+}
+.fontsize81
+{
+    font-size: 81px;
+}
+.fontsize82
+{
+    font-size: 82px;
+}
+.fontsize83
+{
+    font-size: 83px;
+}
+.fontsize84
+{
+    font-size: 84px;
+}
+.fontsize85
+{
+    font-size: 85px;
+}
+.fontsize86
+{
+    font-size: 86px;
+}
+.fontsize87
+{
+    font-size: 87px;
+}
+.fontsize88
+{
+    font-size: 88px;
+}
+.fontsize89
+{
+    font-size: 89px;
+}
+.fontsize90
+{
+    font-size: 90px;
+}
+.fontsize91
+{
+    font-size: 91px;
+}
+.fontsize92
+{
+    font-size: 92px;
+}
+.fontsize93
+{
+    font-size: 93px;
+}
+.fontsize94
+{
+    font-size: 94px;
+}
+.fontsize95
+{
+    font-size: 95px;
+}
+.fontsize96
+{
+    font-size: 96px;
+}
+.fontsize97
+{
+    font-size: 97px;
+}
+.fontsize98
+{
+    font-size: 98px;
+}
+.fontsize99
+{
+    font-size: 99px;
+}
+.fontsize100
+{
+    font-size: 100px;
+}
 .heightauto
 {
     height: auto;
