--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -36,6 +36,7 @@
     transform: scale(@ScaleValue);
     transform-origin: top left;
     z-index: @ZIndex;
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname=@ButtonStyle>    
     display: inline;        
