--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -49,6 +49,7 @@
     z-index: @ZIndex;
     display: @DisplayStyle;
     border-color: @BorderColor.Name;
+    visibility: @Visibility;
 </Styled>
 
 <div class="@CheckBoxControlStyle @ClassName textdonotwrap">
