--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -20,6 +20,7 @@
     border-style: solid;
     border-color: black;
     z-index: @ZIndex;
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname=@ListitemStyle>
     background-color: @ListItemBackgroundColor.Name;
