--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -17,7 +17,8 @@
     display: @Display;
     justify-content: left;
     gap: 0px;    
-    z-index: @ZIndex;    
+    z-index: @ZIndex;
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname=@ListItemContainer>    
     font-family: @FontName
