--- a/Grid.razor
+++ b/Grid.razor
@@ -5,7 +5,7 @@
 @using BlazorStyled
 
 <Styled @bind-Classname=@ContainerStyle>    
-    visibility: @Visiblity;
+    visibility: @Visibility;
     position: @Position;
     left: @LeftStyle;
     top: @TopStyle;    
