--- a/ImageComponent.razor
+++ b/ImageComponent.razor
@@ -11,7 +11,7 @@
     width: auto;
     margin: 0px;
     padding: 0px;
-    visibility: @VisibleStyle;
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname=@ImageStyle>
     background-image: url('@ImageUrl');
