I added SetVisible to the ToggleComponent and the TimeComponent and changed how the CSS works for visibility on those components.

--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -12,7 +12,8 @@
     height: @HeightStyle;
     font-size: @FontSizeStyle;
     outline: none;
-    border-radius: 0px;    
+    border-radius: 0px;
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname="@HoursTextBoxStyle">
     border-left: 1px;
