--- a/ToggleComponent.razor
+++ b/ToggleComponent.razor
@@ -31,6 +31,7 @@
     background-color: @BackgroundColor.Name;
     border-width: @BorderWidth;
     border-color: @BorderColor.Name;    
+    visibility: @Visibility;
 </Styled>
 <Styled @bind-Classname="@OvalLeftButtonStyle">
     width: @OvalEndWidthStyle;
