I set a width property on the GridStyle CSS for the Grid

--- a/Grid.razor
+++ b/Grid.razor
@@ -29,6 +29,7 @@
 <Styled @bind-Classname=@HeaderRowStyle>    
     sticky: @StickyStyle;
     clear: both;
+    width: @WidthStyle;
 </Styled>
 <Styled @bind-Classname=@ContentStyle>
     position: @Position;
