I changed how the width of the Grid works.

--- a/Grid.razor
+++ b/Grid.razor
@@ -29,7 +29,7 @@
 <Styled @bind-Classname=@HeaderRowStyle>    
     sticky: @StickyStyle;
     clear: both;
-    width: @WidthStyle;
+    width: 100%;
 </Styled>
 <Styled @bind-Classname=@ContentStyle>
     position: @Position;
