I fixed a CSS property for Sticky for the Grid (hopefully)

--- a/Grid.razor
+++ b/Grid.razor
@@ -27,7 +27,7 @@
     border-style: @BorderStyle;
 </Styled>
 <Styled @bind-Classname=@HeaderRowStyle>    
-    sticky: @StickyStyle;
+    position: @StickyStyle;
     clear: both;
     width: 100%;
 </Styled>
