I added 5 new properties to the grid
ScrollBarWidthStyle
ScrollBarTrackColor
ScrollBarThumbColor
ScrollBarThumbHoverColor
ScrollBarRadiusStyle

--- a/Grid.razor
+++ b/Grid.razor
@@ -20,6 +20,13 @@
     border-color: @BorderColor.Name;
     overflow-y: @OverflowY;
     overflow-x: @OverflowX;    
+
+    /* Add these */
+    --scrollbar-width: @ScrollBarWidthStyle;
+    --scrollbar-track: @ScrollBarTrackColor.Name;
+    --scrollbar-thumb: @ScrollBarThumbColor.Name;
+    --scrollbar-thumb-hover: @ScrollBarThumbHoverColor.Name;
+    --scrollbar-radius: @ScrollBarRadiusStyle;
 </Styled>
 <Styled @bind-Classname=@GridBorderStyle>    
     border-width: @BorderWidthStyle;
