Added two new properties to the grid for HeaderColor and ColumnHeaderColor

--- a/Grid.razor
+++ b/Grid.razor
@@ -18,8 +18,6 @@
     width: @WidthStyle;
     border-width: @BorderWidthStyle;
     border-color: @BorderColor.Name;
-    overflow-y: @OverflowY;
-    overflow-x: @OverflowX;   
     --scrollbar-width: @ScrollBarWidthStyle;
     --scrollbar-track: @ScrollBarTrackColor.Name;
     --scrollbar-thumb: @ScrollBarThumbColor.Name;
@@ -27,32 +25,23 @@
     --scrollbar-radius: @ScrollBarRadiusStyle;
     --scrollbar-track-border: @ScrollBarTrackBorderColor.Name;
 </Styled>
-<Styled @bind-Classname=@GridStyle2>
-    background-color: @GridBackColor.Name;
-    height: @HeightStyle;
-    line-height: 2vh;
-    font-size: @FontSizeStyle;
-    width: @WidthStyle;
-    border-width: @BorderWidthStyle;
-    border-color: @BorderColor.Name;    
-    --scrollbar-width: @ScrollBarWidthStyle;
-    --scrollbar-track: @ScrollBarTrackColor.Name;
-    --scrollbar-thumb: @ScrollBarThumbColor.Name;
-    --scrollbar-thumb-hover: @ScrollBarThumbHoverColor.Name;
-    --scrollbar-radius: @ScrollBarRadiusStyle;
-    --scrollbar-track-border: @ScrollBarTrackBorderColor.Name;
+<Styled @bind-Classname=@ScrollStyle>
+    overflow-y: @OverflowY;
+    overflow-x: @OverflowX;
 </Styled>
 <Styled @bind-Classname=@GridBorderStyle>    
     border-width: @BorderWidthStyle;
     border-color: @BorderColor.Name;
     border-style: @BorderStyle;
 </Styled>
-<Styled @bind-Classname=@HeaderStyle>    
+<Styled @bind-Classname=@HeaderStyle>
+    background-color: @HeaderColor.Name;
     height: @HeaderHeightStyle;
     clear: both;
     width: 100%;
 </Styled>
-<Styled @bind-Classname=@ColumnHeaderStyle>
+<Styled @bind-Classname=@ColumnHeaderStyle>    
+    background-color: @ColumnHeaderColor.Name;
     position: @StickyStyle;
     clear: both;
     height: @ColumnHeaderHeightStyle;
@@ -87,29 +76,7 @@
 
     .@(GridStyle)::-webkit-scrollbar-thumb:hover {
         background-color: var(--scrollbar-thumb-hover, DimGray);
-    }
-
-    . @(GridStyle2) ::-webkit-scrollbar
-    {
-        width: var(--scrollbar-width, 10px);
-    }
-
-    . @(GridStyle2) ::-webkit-scrollbar-track
-    {
-        background: var(--scrollbar-track, LightGray);
-        border: 1px solid var(--scrollbar-track-border);
-    }
-
-    . @(GridStyle2) ::-webkit-scrollbar-thumb
-    {
-        background-color: var(--scrollbar-thumb, DarkGray);
-        border-radius: var(--scrollbar-radius, 6px);
-    }
-
-    . @(GridStyle2) ::-webkit-scrollbar-thumb:hover
-    {
-        background-color: var(--scrollbar-thumb-hover, DimGray);
-    }
+    }    
 </style>
 
 <div class="@ContainerStyle">
@@ -119,7 +86,7 @@
             @HeaderText
         </div>
     }
-    <div class="@GridStyleInUse @GridBorderStyle @ClassName">
+    <div class="@GridStyle @GridBorderStyle @ClassName @ScrollStyle">
         <div class="@ContentStyle">
             <table class="tablelayoutfixed bordercollapse">
                 @if (GridColumns != null)
